==> SanyV/Autonomus_quad/Drivers/Sensor/PWM_PPM.c <==
#include "stm32h7xx.h"
#include "stm32h7xx_hal.h"
#include "Config.h"
#include "PWM_PPM.h"
#include "ublox.h"
#include "MPU6500.h"
#include "IMU_INS.h"
#include "UKF_lib.h"
#include "hmc5983_spi.h"
#include "ms5611_spi.h"
#include "NAV_POINTS.h"
#define PPM_NCNT 16		 /* макс количество пропусков ППМ */

void Init_PWM_Reciever1(void)
{

	  TIM_ClockConfigTypeDef sClockSourceConfig;
	  TIM_SlaveConfigTypeDef sSlaveConfig;
	  TIM_MasterConfigTypeDef sMasterConfig;
	  TIM_IC_InitTypeDef sConfigIC;

	  data_ready = 0;
	  data_ready = 0;
	  flagSavePoint = 0;

	  htim4.Instance = TIM4;
	  htim4.Init.Prescaler = 127;
	  htim4.Init.CounterMode = TIM_COUNTERMODE_UP;
	  htim4.Init.Period = 65535;
	  htim4.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
	  htim4.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_DISABLE;
	  if (HAL_TIM_Base_Init(&htim4) != HAL_OK)
	  {
	    _Error_Handler(__FILE__, __LINE__);
	  }

	  sClockSourceConfig.ClockSource = TIM_CLOCKSOURCE_INTERNAL;
	  if (HAL_TIM_ConfigClockSource(&htim4, &sClockSourceConfig) != HAL_OK)
	  {
	    _Error_Handler(__FILE__, __LINE__);
	  }

	  if (HAL_TIM_IC_Init(&htim4) != HAL_OK)
	  {
	    _Error_Handler(__FILE__, __LINE__);
	  }

	  sSlaveConfig.SlaveMode = TIM_SLAVEMODE_RESET;
	  sSlaveConfig.InputTrigger = TIM_TS_TI1FP1;
	  sSlaveConfig.TriggerPolarity = TIM_INPUTCHANNELPOLARITY_BOTHEDGE; //TIM_INPUTCHANNELPOLARITY_RISING;
	  sSlaveConfig.TriggerFilter = 0;
	  if (HAL_TIM_SlaveConfigSynchronization(&htim4, &sSlaveConfig) != HAL_OK)
	  {
	    _Error_Handler(__FILE__, __LINE__);
	  }

	  sMasterConfig.MasterOutputTrigger = TIM_TRGO_RESET;
	  sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
	  if (HAL_TIMEx_MasterConfigSynchronization(&htim4, &sMasterConfig) != HAL_OK)
	  {
	    _Error_Handler(__FILE__, __LINE__);
	  }

	  sConfigIC.ICPolarity = TIM_INPUTCHANNELPOLARITY_RISING;
	  sConfigIC.ICSelection = TIM_ICSELECTION_DIRECTTI;
	  sConfigIC.ICPrescaler = TIM_ICPSC_DIV1;
	  sConfigIC.ICFilter = 0;
	  if (HAL_TIM_IC_ConfigChannel(&htim4, &sConfigIC, TIM_CHANNEL_1) != HAL_OK)
	  {
	    _Error_Handler(__FILE__, __LINE__);
	  }

	  if (HAL_TIM_IC_ConfigChannel(&htim4, &sConfigIC, TIM_CHANNEL_2) != HAL_OK)
	  {
	    _Error_Handler(__FILE__, __LINE__);
	  }
	  /*##-3- Start the Input Capture in interrupt mode ##########################*/
	   if(HAL_TIM_IC_Start_IT(&htim4, TIM_CHANNEL_1) != HAL_OK)
	   {
	     /* Starting Error */
		    _Error_Handler(__FILE__, __LINE__);
	   }

}

void Init_PWM_Motor(uint16_t Period1, uint16_t Dp1)
{
	/* Timer Output Compare Configuration Structure declaration */
	TIM_OC_InitTypeDef sConfig;
//	uint32_t Prescaler;

	M1_lev_front  = Dp1;
	M2_prav_back  = Dp1;
	M3_prav_front = Dp1;
	M4_lev_back   = Dp1;

	  htim1.Instance = PWM_M;
//	  Prescaler = (SystemCoreClock / (2*20000000)) - 1;
	  htim1.Init.Prescaler         = 4; //Prescaler;
	  htim1.Init.Period            = Period1;
	  htim1.Init.ClockDivision     = 0;
	  htim1.Init.CounterMode       = TIM_COUNTERMODE_UP;
	  htim1.Init.RepetitionCounter = 0;
	  if (HAL_TIM_PWM_Init(&htim1) != HAL_OK)
	  {
	    /* Initialization Error */
		    _Error_Handler(__FILE__, __LINE__);
	  }

	  /*##-2- Configure the PWM channels #########################################*/
	  /* Common configuration for all channels */
	  sConfig.OCMode       = TIM_OCMODE_PWM1;
	  sConfig.OCPolarity   = TIM_OCPOLARITY_HIGH;
	  sConfig.OCFastMode   = TIM_OCFAST_DISABLE;
	  sConfig.OCNPolarity  = TIM_OCNPOLARITY_HIGH;
	  sConfig.OCNIdleState = TIM_OCNIDLESTATE_RESET;
	  sConfig.OCIdleState  = TIM_OCIDLESTATE_RESET;
	  /* Set the pulse value for channel 1 */
	  sConfig.Pulse = M1_lev_front;
	  if (HAL_TIM_PWM_ConfigChannel(&htim1, &sConfig, TIM_CHANNEL_1) != HAL_OK)
	  {
	    /* Configuration Error */
		    _Error_Handler(__FILE__, __LINE__);
	  }

	  /* Set the pulse value for channel 2 */
	  sConfig.Pulse = M2_prav_back;
	  if (HAL_TIM_PWM_ConfigChannel(&htim1, &sConfig, TIM_CHANNEL_2) != HAL_OK)
	  {
	    /* Configuration Error */
		    _Error_Handler(__FILE__, __LINE__);
	  }

	  /* Set the pulse value for channel 3 */
	  sConfig.Pulse = M3_prav_front;
	  if (HAL_TIM_PWM_ConfigChannel(&htim1, &sConfig, TIM_CHANNEL_3) != HAL_OK)
	  {
	    /* Configuration Error */
		    _Error_Handler(__FILE__, __LINE__);
	  }

	  /* Set the pulse value for channel 4 */
	  sConfig.Pulse = M4_lev_back;
	  if (HAL_TIM_PWM_ConfigChannel(&htim1, &sConfig, TIM_CHANNEL_4) != HAL_OK)
	  {
	    /* Configuration Error */
		    _Error_Handler(__FILE__, __LINE__);
	  }

	  /*##-3- Start PWM signals generation #######################################*/
	  /* Start channel 1 */
	  if (HAL_TIM_PWM_Start(&htim1, TIM_CHANNEL_1) != HAL_OK)
	  {
	    /* PWM Generation Error */
		    _Error_Handler(__FILE__, __LINE__);
	  }
	  /* Start channel 2 */
	  if (HAL_TIM_PWM_Start(&htim1, TIM_CHANNEL_2) != HAL_OK)
	  {
	    /* PWM Generation Error */
		    _Error_Handler(__FILE__, __LINE__);
	  }
	  /* Start channel 3 */
	  if (HAL_TIM_PWM_Start(&htim1, TIM_CHANNEL_3) != HAL_OK)
	  {
	    /* PWM generation Error */
		    _Error_Handler(__FILE__, __LINE__);
	  }
	  /* Start channel 4 */
	  if (HAL_TIM_PWM_Start(&htim1, TIM_CHANNEL_4) != HAL_OK)
	  {
	    /* PWM generation Error */
		    _Error_Handler(__FILE__, __LINE__);
	  }
	  __HAL_TIM_ENABLE_IT(&htim1, TIM_IT_UPDATE);

}

void TIM4_IRQHandler(void)
{
  /* USER CODE BEGIN TIM3_IRQn 0 */

  /* USER CODE END TIM3_IRQn 0 */
  HAL_TIM_IRQHandler(&htim4);
  /* USER CODE BEGIN TIM3_IRQn 1 */

  /* USER CODE END TIM3_IRQn 1 */
}
